<resources>
    <string name="app_name" translatable="false">Gaze</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_contact_title">Add a New Contact</string>
    <string name="add_new_contact_question">Add new contact?</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_name_long">Please enter a name for the new contact.</string>
    <string name="address_book_empty">Your Address Book is currently empty.</string>
    <string name="recent">Recent</string>
    <string name="recently_viewed">Recently viewed contacts</string>
    <string name="all">All</string>
    <string name="my_media">My Media</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="later">Later</string>
    <string name="yes_delete">Yes, delete contact</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="set">Set</string>
    <string name="continue_adding">Continue adding</string>
    <string name="continue_editing">Continue editing</string>
    <string name="create">Create</string>
    <string name="click">Click</string>
    <string name="hint">Hint</string>
    <string name="infoAbout">Info %s</string>
    <string name="contact">Contact</string>
    <string name="contact_info">Contact Information</string>
    <string name="contact_infos">Address, Email, Phone etc.</string>
    <string name="contact_name">Contact name</string>
    <string name="please_wait">Please wait</string>
    <string name="personal">Personal Information</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_with_hint">Nickname (leave blank to delete)</string>
    <string name="add_name">+ Add nickname</string>
    <string name="new_contact_title">New Contact: %s</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="birthdate">Birthdate</string>
    <string name="age">Age</string>
    <string name="know_personally">Know personally</string>
    <string name="met_in_person">Met in person</string>
    <string name="met_in_person_text">You\'ve met %s in person.</string>
    <string name="created">Created</string>
    <string name="last_modified">Last modified</string>
    <plurals name="address">
        <item quantity="one">Address</item>
        <item quantity="other">Addresses</item>
    </plurals>
    <string name="address_type">Address type</string>
    <string name="address_home">Home</string>
    <string name="address_office">Office</string>
    <string name="add_addresse">+ Add address</string>
    <string name="other">Other</string>
    <string name="body_features">Body Features</string>
    <string name="bodytype">Body type</string>
    <string name="body_hair">Body hair</string>
    <string name="select_bodytypes">Select Body Types</string>
    <string name="main_pic">Main picture</string>
    <string name="email">Email</string>
    <string name="email_type">Email type</string>
    <string name="email_private">Private</string>
    <string name="email_business">Business</string>
    <string name="email_other">Other</string>
    <string name="add_email">+ Add Email</string>
    <string name="add_website">+ Add Website</string>
    <string name="add_work">+ Add Work</string>
    <string name="add_new_work">Add new job</string>
    <string name="edit_work">Edit work</string>
    <string name="add_encounter">+ Add Encounter</string>
    <string name="add_new_encounter">Add new encounter</string>
    <string name="edit_encounter">Edit encounter</string>
    <string name="encounter">Encounter</string>
    <string name="add_images">Add images</string>
    <string name="edit_images">Edit images</string>
    <string name="n_files">%s files</string>
    <string name="file">file</string>
    <string name="files">files</string>
    <string name="add_media">Add media</string>
    <string name="add_videos">Add videos</string>
    <string name="email_with_hint">Email (leave blank to delete)</string>
    <string name="endowment">Endowment</string>
    <string name="endowment_length">Endowment Length</string>
    <string name="endowment_girth">Endowment Girth</string>
    <string name="endowment_diameter">Endowment Diameter</string>
    <string name="length">Length</string>
    <string name="diameter">Diameter</string>
    <string name="girth">Girth</string>
    <string name="cut_or_uncut">Cut or uncut</string>
    <string name="is_cut">Is cut?</string>
    <string name="uncut">Uncut</string>
    <string name="cut">Cut</string>
    <string name="feels_like">Feels like</string>
    <string name="unit_system">Unit System</string>
    <string name="metric_system">Metric System</string>
    <string name="imperial_system">Imperial System</string>
    <plurals name="inch">
        <item quantity="one">inch</item>
        <item quantity="other">inches</item>
    </plurals>
    <string name="inches">inches</string>
    <string name="inches_short">\"</string>
    <string name="inches_abbr">in</string>
    <string name="feet">Feet</string>
    <plurals name="millimeter">
        <item quantity="one">millimeter</item>
        <item quantity="other">millimeters</item>
    </plurals>
    <plurals name="millimeter_short">
        <item quantity="one">mm</item>
        <item quantity="other">mms</item>
    </plurals>
    <string name="cm">cm</string>
    <plurals name="centimeter">
        <item quantity="one">centimeter</item>
        <item quantity="other">centimeters</item>
    </plurals>
    <plurals name="centimeter_short">
        <item quantity="one">cm</item>
        <item quantity="other">cms</item>
    </plurals>
    <plurals name="meter">
        <item quantity="one">meter</item>
        <item quantity="other">meters</item>
    </plurals>
    <plurals name="kilometer">
        <item quantity="one">kilometer</item>
        <item quantity="other">kilometers</item>
    </plurals>
    <string name="cm_numbered">%dcm</string>
    <string name="feet_inches_numbered" translatable="false">%1$d\'%2$d\"</string>
    <string name="feet_inches_full">%1$d feet %2$d inches</string>
    <string name="feet_inches_short" translatable="false">%1$dft %2$din</string>
    <string name="remarks">Remarks</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My notes</string>
    <string name="notes_sexy_time_log">Notes, Encounters log</string>
    <string name="sexy_time_log">Sexy Time Log</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="select_ethnicities">Select Ethnicity</string>
    <string name="fetish">Fetish</string>
    <string name="fetishes">Fetishes</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair color</string>
    <string name="hair_style">Hair style</string>
    <string name="eye_color">Eye color</string>
    <string name="orientation">Orientation</string>
    <string name="health">Health</string>
    <string name="health_status">Health Status</string>
    <string name="hiv">HIV</string>
    <string name="hpv">HPV</string>
    <string name="hcv">Hepatitis C</string>
    <string name="sex_role">Sex role</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="versatile">Versatile</string>
    <string name="out">Out</string>
    <string name="is_out">Is out?</string>
    <string name="closeted">Closeted</string>
    <string name="bareback">Bareback</string>
    <string name="safe_sex">Safe sex</string>
    <string name="girly">Girly</string>
    <string name="effeminate">Effeminate</string>
    <string name="feminine">Feminine</string>
    <string name="masculine">Masculine</string>
    <string name="swallows_loads">Swallows loads</string>
    <string name="takes_loads_up_the_bum">Takes loads up the bum</string>
    <string name="sexperience">Sexperience</string>
    <string name="smoking">Smoking</string>
    <string name="smoker">Smoker</string>
    <string name="gallery">Gallery</string>
    <string name="not_available">n/a</string>
    <string name="meet_date">Meet Date</string>
    <string name="my_role">My Role</string>
    <string name="his_role">His Role</string>
    <string name="my_load_went_to">My Load went to...</string>
    <string name="his_load_went_to">His Load went to...</string>
    <string name="location">Location</string>
    <string name="google_maps">Google Maps Link</string>
    <string name="upgrade_to_pro">Upgrade to Pro Version</string>
    <string name="pref_unit_system_key" translatable="false">unitSystem</string>
    <string name="pref_header_unit_system">Unit System</string>
    <string name="pref_description_metric_system">Currently using: %s</string>
    <string name="pref_pro_user_key" translatable="false">isProUser</string>
    <string name="pref_header_pro_version" translatable="false">PRO Version</string>
    <string name="pref_pro_free_user">You are currently using the FREE version.</string>
    <string name="pref_eggplants_key" translatable="false">eggplants</string>
    <string name="pref_enable_ads_key" translatable="false">isAdsEnabled</string>
    <string name="pref_header_ads">Ads</string>
    <string name="pref_description_ads_enabled_free_user">Upgrade to Pro version to disable the ads.</string>
    <string name="pref_clear_search_history_key" translatable="false">clearSearchHistory</string>
    <string name="pref_clear_search_history_title">Clear Search History</string>
    <string name="pref_clear_search_history_text">Click here to clear the search history.</string>
    <string name="pref_send_feedback_key" translatable="false">sendFeedback</string>
    <string name="pref_send_feedback_title">Send us your feedback</string>
    <string name="pref_send_feedback_text">Have ideas or suggestions? Send your feedback now to feedback@gazeapp.net</string>
    <string name="upgrade_to_pro_text_first">Upgrade now to Pro version to enjoy the following benefits:</string>
    <string name="upgrade_to_pro_bulletpoint_1">&#8226; unlimited number of contacts</string>
    <string name="upgrade_to_pro_bulletpoint_2">&#8226; save unlimited images</string>
    <string name="upgrade_to_pro_bulletpoint_3">&#8226; completely ads-free</string>
    <string name="upgrade_to_pro_text_last">And more cool features will be added in the near future.</string>
    <string name="upgrade_to_pro_already_have_pro">You already have Pro version and can enjoy the following benefits:</string>
    <string name="you_are_pro_user">Congratulations, you are Pro user!</string>
    <string name="change_subscription">Change subscription</string>
    <string name="eggplants">Eggplants</string>
    <string name="no_eggplants">No %s earned yet.</string>
    <string name="pref_fingerprint_title">Fingerprint Authentication</string>
    <string name="pref_fingerprint_text">Lock Gaze with your fingerprint. This way only you can open and use the app.</string>
    <string name="finger_key" translatable="false">fingerKey</string>
    <string name="first_gaze_contact">Hi, I\'m your first Gaze contact! Nice to meet you.</string>
    <string name="details">Details</string>
    <string name="photo_of_the_person">Photo of the person</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="nothing_to_show_here">Nothing to show here.</string>
    <string name="media_gallery_navigation">%1$d/%2$d</string>
</resources>