<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.gazeapp.ui.home.HomeFragment"
        android:label="@string/recent"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="net.gazeapp.ui.dashboard.DashboardFragment"
        android:label="@string/all"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.gazeapp.ui.notifications.NotificationsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>