<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/encounter_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    card_view:cardCornerRadius="@dimen/cardview_card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/meet_date"
            style="@style/Title.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meet_date"
            android:textAllCaps="true"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:isIndicator="true"
            card_view:layout_constraintBottom_toBottomOf="@+id/meet_date"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/meet_date" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:alpha="0.2"
            android:background="@color/primary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/meet_date" />

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:alpha="0.3"
            android:contentDescription="@string/splash_icon"
            android:src="@drawable/ic_water_drop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/view1" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/splash_icon"
            card_view:layout_constraintTop_toTopOf="@+id/splash_icon">

            <TextView
                android:id="@+id/meet_location_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:visibility="visible" />

            <TextView
                android:id="@+id/meet_location"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:visibility="visible" />

            <TextView
                android:id="@+id/google_maps_link"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/google_maps"
                android:visibility="visible" />

            <View
                android:id="@+id/location_divier"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/my_role_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_role"
                android:visibility="visible" />

            <TextView
                android:id="@+id/my_role"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/my_role" />

            <TextView
                android:id="@+id/his_role_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/his_role" />

            <TextView
                android:id="@+id/his_role"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/his_role" />

            <TextView
                android:id="@+id/safe_sex_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_sex" />

            <TextView
                android:id="@+id/safe_sex"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/safe_sex" />

            <TextView
                android:id="@+id/my_load_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_load_went_to" />

            <TextView
                android:id="@+id/my_load"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/my_load_went_to" />

            <TextView
                android:id="@+id/his_load_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/his_load_went_to" />

            <TextView
                android:id="@+id/his_load"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/his_load_went_to" />

            <TextView
                android:id="@+id/remarks_hint"
                style="@style/Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks" />

            <TextView
                android:id="@+id/remarks"
                style="@style/Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
